--- a/remote-control.html
+++ b/remote-control.html
@@ -42,6 +42,12 @@
         <button class="button" data-path="/nudgeUp"> &rarr; </button>
     </div>
 
+    <div class="row" data-path="/modulation/Knobs">
+    <div class="xy" data-path="/macro4" data-abs-path-y="/lx/modulation/Knobs/macro5">
+        <button></button>
+    </div>
+    </div>
+
     <script src="/osc-controller.js" type="module"></script>
     </body>
 </html>
